# MoonGlobe

./: .gitignore  CMakeLists.txt  README.md  build.sh  rebuild.sh
libs/corrade/: Makefile
libs/corrade/modules/: Makefile
libs/corrade/src/: Makefile
libs/corrade/src/Corrade/: Makefile  configure.h
libs/corrade/src/Corrade/Containers/: Makefile
libs/corrade/src/Corrade/Interconnect/: Makefile
libs/corrade/src/Corrade/PluginManager/: Makefile  configure.h
libs/corrade/src/Corrade/TestSuite/: Makefile
libs/corrade/src/Corrade/TestSuite/Compare/: Makefile
libs/corrade/src/Corrade/Utility/: Makefile
libs/libjpeg/: CMakeLists.txt  CMakeLists.txt.bak
libs/magnum/: Makefile
libs/magnum-plugins/: Makefile
libs/magnum-plugins/modules/: Makefile
libs/magnum-plugins/package/archlinux/: PKGBUILD-emscripten-wasm
libs/magnum-plugins/src/: Makefile
libs/magnum-plugins/src/MagnumPlugins/: Makefile
libs/magnum-plugins/src/MagnumPlugins/FreeTypeFont/: FreeTypeFont.cpp
libs/magnum-plugins/src/MagnumPlugins/JpegImporter/: Makefile  configure.h
libs/magnum-plugins/src/MagnumPlugins/PngImporter/: Makefile  configure.h
libs/magnum/modules/: Makefile
libs/magnum/src/: Makefile
libs/magnum/src/Magnum/: Makefile  configure.h
libs/magnum/src/Magnum/DebugTools/: Makefile
libs/magnum/src/Magnum/Math/: Makefile
libs/magnum/src/Magnum/Math/Algorithms/: Makefile
libs/magnum/src/Magnum/Math/Geometry/: Makefile
libs/magnum/src/Magnum/MeshTools/: Makefile
libs/magnum/src/Magnum/Platform/: CMakeLists.txt  Makefile
libs/magnum/src/Magnum/Primitives/: Makefile
libs/magnum/src/Magnum/SceneGraph/: Makefile
libs/magnum/src/Magnum/Shaders/: Makefile
libs/magnum/src/Magnum/Shapes/: Makefile
libs/magnum/src/Magnum/Text/: Makefile  Renderer.cpp
libs/magnum/src/Magnum/TextureTools/: Makefile
libs/magnum/src/Magnum/Trade/: Makefile
libs/magnum/src/MagnumExternal/: Makefile
libs/magnum/src/MagnumExternal/OpenAL/: Makefile
libs/magnum/src/MagnumExternal/OpenGL/: Makefile
libs/magnum/src/MagnumExternal/OpenGL/GLES2/: Makefile
libs/magnum/src/MagnumExternal/OpenGL/KHR/: Makefile
libs/magnum/src/MagnumExternal/Optional/: Makefile
libs/magnum/src/MagnumPlugins/: Makefile
libs/magnum/src/MagnumPlugins/TgaImporter/: Makefile  configure.h
libs/modules/: FindFreeType.cmake  FindJPEG.cmake
resources/: features  features.conf  font.conf  level1.conf  level2.conf  level3.conf  parsed
src/: MoonGlobeApplication.cpp  MoonGlobeApplication.h  configure.h  configure.h.cmake  main.cpp  moonglobe.cpp  moonglobe.cpp.save  moonglobe.h  moonglobe_ndk.cpp
src/Camera/: Camera.cpp  Camera.h
src/Coords/: Coords.h
src/Fragment/: Fragment.cpp  Fragment.h
src/Label/: Label.cpp  Label.h
src/LabelManager/: LabelManager.cpp  LabelManager.h
src/MoonGlobe/: MoonGlobe.cpp  MoonGlobe.h
src/ResourceManager/: ResourceManager.cpp  ResourceManager.h
src/Utils/: MeshGenerators.cpp  MeshGenerators.h  to_str.cpp  to_str.h
src/pc/: MoonGlobeApplication.cpp  PCMoonGlobeApplication.cpp  PCMoonGlobeApplication.h  main.cpp
